add login and signup features

--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -14,7 +14,7 @@
         android:layout_marginStart="35dp"
         android:layout_marginTop="35dp"
         android:fontFamily="@font/roboto_medium"
-        android:text="Hi, John Doe"
+        android:text=""
         android:textColor="@color/black"
         android:textSize="28sp"
         app:layout_constraintStart_toStartOf="parent"
