--- a/app/src/main/res/layout/activity_welcome.xml
+++ b/app/src/main/res/layout/activity_welcome.xml
@@ -24,6 +24,9 @@
         android:layout_marginStart="32dp"
         android:layout_marginTop="32dp"
         android:layout_marginEnd="16dp"
+        android:textSize="20sp"
+        android:textColor="@color/black"
+        android:fontFamily="@font/cormorand_semibold"
         android:backgroundTint="@color/primary_blue"
         android:text="@string/signup"
         app:layout_constraintEnd_toStartOf="@+id/guidelineVertical"
@@ -37,6 +40,9 @@
         android:layout_marginStart="16dp"
         android:layout_marginTop="32dp"
         android:layout_marginEnd="32dp"
+        android:textSize="20sp"
+        android:textColor="@color/black"
+        android:fontFamily="@font/cormorand_semibold"
         android:backgroundTint="@color/primary_blue"
         android:text="@string/login"
         app:layout_constraintEnd_toEndOf="parent"
