Commit Bottom Nav + Mic Unfinished

--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -126,7 +126,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:textSize="20sp"
-        android:text="Log In"
+        android:text="@string/login"
         android:layout_marginTop="20dp"
         android:fontFamily="@font/cormorand_semibold"
         android:textColor="@color/black"
@@ -187,7 +187,7 @@
         android:fontFamily="@font/cormorant_medium"
         android:gravity="center_horizontal"
         android:layout_marginTop="8dp"
-        android:text="Don't have any account yet?"
+        android:text="@string/no_account"
         android:textColor="@color/black"
         android:textSize="15sp"
         app:layout_constraintEnd_toEndOf="parent"
@@ -201,7 +201,7 @@
         android:layout_height="wrap_content"
         android:fontFamily="@font/montserrat_regular"
         android:gravity="center_horizontal"
-        android:text="Create Now"
+        android:text="@string/create_now"
         android:textColor="@color/blue"
         android:textSize="11sp"
         app:layout_constraintEnd_toEndOf="parent"
