--- a/app/src/main/res/layout/activity_sign_up.xml
+++ b/app/src/main/res/layout/activity_sign_up.xml
@@ -35,7 +35,7 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:gravity="center_horizontal"
-        android:text="Sign Up"
+        android:text="@string/signup"
         android:paddingTop="15dp"
         android:fontFamily="@font/cormorant_medium"
         android:textSize="28sp"
@@ -171,7 +171,7 @@
         android:layout_marginTop="28dp"
         android:backgroundTint="@color/blue"
         android:fontFamily="@font/cormorand_semibold"
-        android:text="Sign In"
+        android:text="@string/login"
         android:textAllCaps="false"
         android:textColor="@color/black"
         android:textSize="20sp"
