--- a/app/src/main/res/layout/fragment_sleep_track.xml
+++ b/app/src/main/res/layout/fragment_sleep_track.xml
@@ -15,6 +15,7 @@
         android:text="@string/greeting"
         android:textSize="25sp"
         android:textColor="@color/white"
+        android:fontFamily="@font/montserrat_medium"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"/>
@@ -49,11 +50,29 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:backgroundTint="@color/primary_blue"
-        android:layout_marginTop="50dp"
+        android:layout_marginTop="300dp"
         android:text="@string/tracking_before"
-        app:layout_constraintBottom_toBottomOf="parent"
+        android:fontFamily="@font/montserrat_medium"
+
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@id/btn_alarm" />
+
+    <Button
+        android:id="@+id/play_button"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:fontFamily="@font/montserrat_medium"
+        android:layout_marginBottom="80dp"
+        android:text="Play"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@id/btn_track" />
+
+<!--    <Button-->
+<!--        android:id="@+id/btn_stop"-->
+<!--        android:layout_width="wrap_content"-->
+<!--        android:layout_height="wrap_content"-->
 
 </androidx.constraintlayout.widget.ConstraintLayout>
