--- a/app/src/main/res/layout/activity_welcome.xml
+++ b/app/src/main/res/layout/activity_welcome.xml
@@ -17,6 +17,22 @@
         app:layout_constraintTop_toTopOf="parent"
         android:src="@drawable/image_koala" />
 
+
+    <TextView
+        android:id="@+id/tvTidurLelap"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:fontFamily="@font/cormorant_semibolditalic"
+        android:text="Tidur Lelap"
+        android:textColor="@color/blue"
+        android:textSize="30sp"
+        app:layout_constraintBottom_toBottomOf="@+id/imageView"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.498"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="@+id/imageView"
+        app:layout_constraintVertical_bias="0.821" />
+
     <Button
         android:id="@+id/signupButton"
         android:layout_width="0dp"
