--- a/app/src/main/res/layout/fragment_sleep_track.xml
+++ b/app/src/main/res/layout/fragment_sleep_track.xml
@@ -11,8 +11,9 @@
         android:id="@+id/tv_greeting"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginTop="45dp"
+        android:layout_marginTop="65dp"
         android:text="@string/greeting"
+        android:gravity="center"
         android:textSize="25sp"
         android:textColor="@color/white"
         android:fontFamily="@font/montserrat_medium"
@@ -34,45 +35,20 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/tv_greeting"/>
 
-    <Button
-        android:id="@+id/btn_alarm"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="10dp"
-        android:backgroundTint="@color/primary_blue"
-        android:text="@string/alarm"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/time" />
 
     <Button
         android:id="@+id/btn_track"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_marginTop="250dp"
         android:backgroundTint="@color/primary_blue"
-        android:layout_marginTop="300dp"
+        android:fontFamily="@font/montserrat_medium"
         android:text="@string/tracking_before"
-        android:fontFamily="@font/montserrat_medium"
-
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/btn_alarm" />
-
-    <Button
-        android:id="@+id/play_button"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:fontFamily="@font/montserrat_medium"
-        android:layout_marginBottom="80dp"
-        android:text="Play"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/btn_track" />
+        app:layout_constraintTop_toBottomOf="@id/time" />
 
-<!--    <Button-->
-<!--        android:id="@+id/btn_stop"-->
-<!--        android:layout_width="wrap_content"-->
-<!--        android:layout_height="wrap_content"-->
+
 
 </androidx.constraintlayout.widget.ConstraintLayout>
