add preferences for username and email

--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <color name="purple_200">#488BB7</color>
+    <color name="purple_200">#EAF7FF</color>
     <color name="purple_500">#488BB7</color>
     <color name="purple_700">#488BB7</color>
     <color name="teal_200">#FF03DAC5</color>
